<resources>
    <string name="app_name">smart sensors</string>

    <!-- generic texts -->
    <string name="error">Error</string>
    <string name="permission_required">Permission required</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_granted">Permission granted</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="unknown_service">Unknown service</string>
    <string name="unknown_characteristic">Unknown BLE Characteristic</string>

    <!-- Bluetooth -->
    <string name="error_bt_not_enabled">Bluetooth is not enabled. Please enable it to use this App.</string>
    <string name="button_enable_bluetooth">Enable Bluetooth</string>
    <string name="error_location_permission_required">Location services are required for Bluetooth as well.</string>
    <string name="button_grant_location_permission">Grant Location Permission</string>
    <string name="error_ble_not_supported">Your device does not support Bluetooth low energy (BLE).</string>
    <string name="error_bluetooth_not_supported">Your device does not support Bluetooth or BLE.</string>
    <string name="info_start_scanning">Start scanning for devices</string>
    <string name="info_stop_scanning">Stop scanning for devices</string>
    <string name="error_scanning_failed">Bluetooth scanning failed due to an unknown reason</string>


    <!-- action menu -->
    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_rescan">Rescan</string>

    <!-- main view -->
    <string name="label_request_permissions">Request Permission</string>

    <!-- device scan view -->
    <string name="label_device_list">Available devices</string>

    <!-- tanklevel view -->
    <string name="tank_level_label">Current Tank level</string>

    <!-- battery view -->
    <string name="battery_label">Current Battery status</string>


    <string name="description_ble_image">bluetooth device</string>
    <string name="description_ble_signal">bluetooth signal strength</string>
    <string name="ble_signal_numeric">%1$d dbm</string>
    <string name="tank_level_value">%1$d %%</string>
</resources>