<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_device_scan"
    app:startDestination="@id/DeviceListFragment">

    <fragment
        android:id="@+id/DeviceListFragment"
        android:name="com.verges.smartsensors.fragments.DeviceListFragment"
        android:label="@string/label_device_list"
        tools:layout="@layout/fragment_device_list">
        <action
            android:id="@+id/action_DeviceList_to_TankLevel"
            app:destination="@id/TankLevelFragment" />
        <action
            android:id="@+id/action_DeviceList_to_Battery"
            app:destination="@id/BatteryFragment" />
    </fragment>
    <fragment
        android:id="@+id/TankLevelFragment"
        android:name="com.verges.smartsensors.fragments.DeviceTankLevelFragment"
        android:label="@string/tank_level_label"
        tools:layout="@layout/fragment_tank_level">
        <action
            android:id="@+id/action_TankLevelFragment_to_DeviceListFragment"
            app:destination="@id/DeviceListFragment" />
    </fragment>

    <fragment
        android:id="@+id/BatteryFragment"
        android:name="com.verges.smartsensors.fragments.DeviceBatteryFragment"
        android:label="@string/battery_label"
        tools:layout="@layout/fragment_battery">
        <action
            android:id="@+id/action_BatteryFragment_to_DeviceListFragment"
            app:destination="@id/DeviceListFragment" />
    </fragment>
</navigation>