<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/rounded_corners"
    android:clickable="true"
    android:focusable="true"
    android:elevation="5dp"
    android:outlineProvider="background">

    <ImageView
        android:id="@+id/deviceIcon"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:contentDescription="@string/description_ble_image"
        app:layout_constraintBottom_toBottomOf="@+id/deviceName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/outline_bluetooth_connected_24" />

    <ImageView
        android:id="@+id/signalStrength"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/description_ble_signal"
        app:layout_constraintBottom_toBottomOf="@+id/deviceName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_signal_cellular_alt_24" />

    <TextView
        android:id="@+id/signalStrengthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ble_signal_numeric"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signalStrength" />

    <TextView
        android:id="@+id/deviceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/deviceIcon"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@tools:sample/full_names" />

    <TextView
        android:id="@+id/deviceAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deviceName"
        tools:text="@tools:sample/cities" />

</androidx.constraintlayout.widget.ConstraintLayout>